# sw-mod-update-ja

./: .gitignore  Makefile  README.md  potrans.toml  pyproject.toml
loc/: ja.po
src/potrans/: potrans.py
