[tool.poetry]
name = "sw-mod-update-ja"
version = "0.1.0"
description = ""
authors = ["Hiroshi Miura <hirmiura@gmail.com>"]
readme = "README.md"
packages = [{include = "sw_mod_update_ja", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
polib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
mypy   = "^1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
no_implicit_optional   = true
warn_redundant_casts   = true
warn_unused_ignores    = false
plugins                = [ "pydantic.mypy", "numpy.typing.mypy_plugin" ]


[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pycache__",
]
line-length = 100
target-version = "py312"


[tool.ruff.lint]
select = [ "E", "F", "W", "C", "I", "N", "D", "UP", "G", "Q" ]
ignore = [ "D1", "D400", "D415" ]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "E402" ]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pyright]
include = [ "src" ]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "**/__pycache__",
]
pythonVersion = "3.12"
pythonPlatform = "Linux"


[tool.pytest.ini_options]
addopts    = [ "--import-mode=importlib" ]
pythonpath = [ "src" ]

